Don’t let long words break the dumb mobile layout.

--- a/assets/sass/includes/type.scss
+++ b/assets/sass/includes/type.scss
@@ -5,6 +5,8 @@ body {
   line-height: 26px;
   font-weight: 400;
 
+  word-wrap: break-word;
+
   @media screen and ( min-width: $desktop-width ) {
     font-size: 18px;
     line-height: 30px;
