--- a/assets/sass/includes/type.scss
+++ b/assets/sass/includes/type.scss
@@ -1,6 +1,6 @@
 // Set typeface
 body {
-  font-family: "Fira Mono", monospace;
+  font-family: "Fira Sans", sans-serif;
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
