--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -18,7 +18,7 @@ body-class: notes
       {% capture year %}{{ current }}{% endcapture %}
     {% endif %}
         <li class="archive-item">
-          <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          <a href="{{ post.url }}">{{ post.title }}</a>
         </li>
   {% endfor %}
     </ul>
