--- a/assets/sass/includes/type.scss
+++ b/assets/sass/includes/type.scss
@@ -1,6 +1,6 @@
 // Set typeface
 body {
-  font-family: "Fira Sans", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
@@ -33,7 +33,7 @@ a:hover {
 
 pre,
 code {
-  font-family: "Fira Mono", monospace;
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 
   white-space: pre-wrap;
   white-space: -moz-pre-wrap;
