Put sass files where Jekyll expects them.

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -1,5 +1,5 @@
-@import "includes/variables";
-@import "includes/type";
-@import "includes/scaffolding";
-@import "includes/layout";
-@import "includes/notes";
+@import "variables";
+@import "type";
+@import "scaffolding";
+@import "layout";
+@import "notes";
