Make all the links relative.

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -14,7 +14,7 @@ body-class: notes
   </article>
 
   <div class="go-back">
-    <a href="{{ "/" | prepend: site.baseurl }}">← View other notes</a>
+    <a href="/">← View other notes</a>
   </div>
 
 </div>
