--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,7 @@
     {{ style | scssify }}
   </style>
 
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml">
 
   <script type="text/javascript">document.documentElement.className = 'js'</script>
 </head>
