--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {{ content }}
   </main>
 
-  <script type="text/javascript" src="{{ "/scripts/app.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="/scripts/app.js"></script>
 
 </body>
 
