Callout at the beginning

--- a/_sass/scaffolding.scss
+++ b/_sass/scaffolding.scss
@@ -17,3 +17,9 @@ hr {
   border: 0 none;
   border-top: 1px solid #000;
 }
+
+blockquote {
+  margin: 1em 0;
+  padding: 1px 1em;
+  background-color: #f1f1f1;
+}
