Change feed path but keep around old path just in case

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     {{ style | scssify }}
   </style>
 
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed/">
 
   <script type="text/javascript">document.documentElement.className = 'js'</script>
 </head>
